--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <h2> VR, AR and Game Developer</h2>
                 <p>
                     A Software engineer specialized in VR,
-                    AR, and 2D/3D Games applications with unity engine by C# language.
+                    AR, and 2D/3D Games applications with unity engine by C# language with Educational, Marketing and Real estate XR applications. 
+                    As Immersive or simulation or training..
                 </p>
                 <div class="btn-con">
                     <a href="https://drive.google.com/file/d/1LmfF19CxXHqzgfxkp6UQrmJUQtOelDZV/view?usp=sharing" class="main-btn" target="_blank">
