--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
+                    <p class="tl-duration">2023 - Present - Full-Time , Cairo</p>
+                    <h5>VR/AR Developer<span> - GG & Grace International</span></h5>
+                    <p>
+                        • Design and implementation VR/AR applications to
+                        implement a simulation , Education, Marketing, and Training apps in Hospitality industry.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
                     <p class="tl-duration">2019 - Present - Freelancer , Cairo</p>
                     <h5>Unity Developer<span> - Somnia Solutions</span></h5>
                     <p>
