--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                     AR, and 2D/3D Games applications with Unity engine by C# language with Educational, Marketing and Real estate XR applications. 
                     As Immersive or Simulation or Training.
                 </p>
-                <div class="btn-con">
+               <!-- <div class="btn-con">
                     <a href="https://drive.google.com/file/d/1LmfF19CxXHqzgfxkp6UQrmJUQtOelDZV/view?usp=sharing" class="main-btn" target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
-                </div>
+                </div>-->
             </div>
         </div>
     </header>
