--- a/VR.html
+++ b/VR.html
@@ -19,9 +19,9 @@
                 Here is some of my work that I've done in various industries and fields.
             </p>
             <div class="portfolios">
-				<div class="portfolio-item">
+		<div class="portfolio-item">
                     <div class="image">
-                        <img src="img/housekeeping.jpg" alt="">
+                        <img src="img/housekeeping.JPG" alt="">
                     </div>
                     <div class="hover-items">
                         <h4>House Keeping Training-VR</h4>
@@ -33,9 +33,9 @@
                     </div>
                 </div>
 				
-				<div class="portfolio-item">
+		<div class="portfolio-item">
                     <div class="image">
-                        <img src="img/designer.jpg" alt="">
+                        <img src="img/designer.JPG" alt="">
                     </div>
                     <div class="hover-items">
                         <h4>Designer Training-VR</h4>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 				
-				<div class="portfolio-item">
+		<div class="portfolio-item">
                     <div class="image">
                         <img src="img/muscles.jpg" alt="">
                     </div>
