--- a/AR.html
+++ b/AR.html
@@ -73,7 +73,19 @@
                         </div>
                     </div>
                 </div>
-		    
+		<div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/Hispaniola.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h4>Octar Education-AR</h4>
+                        <div class="icons">
+                            <a href="https://www.octaredu.com/ar/home/" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>    
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/ar-tourism.jpg" alt="">
