--- a/AR.html
+++ b/AR.html
@@ -75,7 +75,7 @@
                 </div>
 		<div class="portfolio-item">
                     <div class="image">
-                        <img src="img/OctarIcon.PNG" alt="">
+                        <img src="img/OctarIcon.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h4>Octar Education-AR</h4>
