--- a/VR.html
+++ b/VR.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 				
-				<div class="portfolio-item">
+		<div class="portfolio-item">
                     <div class="image">
                         <img src="img/newcapital360.jpg" alt="">
                     </div>
@@ -100,7 +100,19 @@
                         </div>
                     </div>
                 </div>
-				
+		<div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/LexusVR.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h4>Lexus VR</h4>
+                        <div class="icons">
+                            <a href="https://drive.google.com/file/d/1ARBDLKx4D4LT0_zLLqyK15akb95LCmN2/view" class="icon" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>	
 				<div class="portfolio-item">
                     <div class="image">
                         <img src="img/booth_domty_vr.jpg" alt="">
